loadbalancer-controller/alb-exp/ingress.yaml
---
# Supported annotations
# https://kubernetes-sigs.github.io/aws-load-balancer-controller/v2.7/guide/ingress/annotations/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-application-alb
  namespace: lbc-app-alb
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:312211201134:certificate/b9d763d8-c2e1-4374-945c-8f36d63d80f5
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  ingressClassName: alb
  rules:
    - host: lbc-alb.valerii-vasianovych.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nodejs-application-alb
                port:
                  number: 3000
